test/files/neg/t5903b/Test_2.scala
object Test extends App {
  import Interpolation._
  2 match {
    case t"$x" => println(x)
  }
}
